--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                                 </div>
                                 <div class="flex justify-between items-center bg-indigo-800 p-3 rounded">
                                     <span>מרוץ עריכות</span>
-                                    <span class="bg-indigo-700 px-2 py-1 rounded text-xs">קוד: 3829-4938-2849</span>
+                                    <span class="bg-indigo-700 px-2 py-1 rounded text-xs">קוד: 4595-7638-0900</span>
                                 </div>
                                 <div class="flex justify-between items-center bg-indigo-800 p-3 rounded">
                                     <span>תרגול עריכות בקרב</span>
@@ -336,7 +336,7 @@
                                 </div>
                                 <div class="flex justify-between items-center bg-indigo-800 p-3 rounded">
                                     <span>שילוב בנייה ועריכה</span>
-                                    <span class="bg-indigo-700 px-2 py-1 rounded text-xs">קוד: 3829-4938-2849</span>
+                                    <span class="bg-indigo-700 px-2 py-1 rounded text-xs">3941-4008-3987</span>
                                 </div>
                             </div>
                         </div>
