--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+[⚠️ Suspicious Content] <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
     <meta charset="UTF-8">
@@ -336,7 +336,7 @@
                                 </div>
                                 <div class="flex justify-between items-center bg-indigo-800 p-3 rounded">
                                     <span>שילוב בנייה ועריכה</span>
-                                    <span class="bg-indigo-700 px-2 py-1 rounded text-xs">3941-4008-3987</span>
+                                    <span class="bg-indigo-700 px-2 py-1 rounded text-xs">קוד:3941-4008-3987 </span>
                                 </div>
                             </div>
                         </div>
