--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                         </div>
                         <button id="video-btn" class="glow-btn bg-gradient-to-r from-blue-600 to-purple-600 text-white py-3 px-8 rounded-full text-lg flex items-center justify-center space-x-2">
                             <i class="fas fa-play"></i>
-                            <span>צפה במדריכי וידאו</span>
+                            <span>וידאו</span>
                         </button>
                     </div>
                 </div>
@@ -632,7 +632,7 @@
 
         videoBtn.addEventListener('click', () => {
             // Set the video URL (replace with your actual video URL)
-            videoIframe.src = 'https://ai.invideo.io/watch/uOk5tU1kgjW';
+            videoIframe.src = 'https://www.youtube.com/shorts/ad4hz3i4ok0?feature=share';
             
             // Show the modal with animation
             gsap.to(videoModal, {
